Athena/wwwroot/Templates/template4/NetworkPolicy/template-dmz-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: dmz-policy
  labels:
    lab: example
spec:
  podSelector:
    matchLabels:
      lab: example
      net: dmz
  ingress:
    - from:
      - podSelector:
          matchLabels: 
            lab: example
      - namespaceSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
  egress:
    - to:
      - podSelector:
          matchLabels:
            lab: example
      - namespaceSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
